option java_package = "fr.kissy.hellion.definition.encoder.proto";
option java_outer_classname = "ObjectDto";
option java_generic_services = false;

import "Common/System.proto";
import "Common/Property.proto";

message ObjectProto {
    message SystemObjectProto {
        required SystemProto.Type systemType = 10;
        repeated PropertyProto properties = 11;
        optional string type = 12;
    }
    required string name = 1;
    repeated SystemObjectProto systemObjects = 2;
}